--- a/index.html
+++ b/index.html
@@ -36,6 +36,26 @@
     </div>
 
     </nav>
+    <section id="profile">
+        <div class="section__pic-container">
+            <img src="./assets/profile-pic.png" alt="Tulio Sasaya profile picture">
+        </div>
+        <div class="section__text">
+            <p class="section__text__p1">Hello, I'm</p>
+            <h1 class="title">Tulio Sasaya</h1>
+            <p class="section__text__p2">Content Creator</p>
+            <div class="btn-container">
+                <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
+                <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
+            </div>
+            <div id="socials-container">
+                <img src="./assets/linkedin.png" alt="My Linkedin profile"
+                class="icon" onclick="location.href='https://linkedin.com/'">
+                <img src="./assets/github.png" alt="My Github profile"
+                class="icon" onclick="location.href='https://github.com/'">
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
