added insta360 drop down feature

--- a/index.html
+++ b/index.html
@@ -56,11 +56,22 @@
             <div class="misc-container">
                 <button class="misc misc-button1" onclick="location.href='mailto:tksasaya.business@gmail.com'">
                     <i class="left-icon fas fa-solid fa-envelope"></i>
-                    <div class="text-center">
+                    <div class="misc-center">
                         <h3>Email Contact</h3>
                     </div>
                 </button>
-                
+            </div>
+            <div class="dropdown-container">
+                <button class="dropdown" onclick="toggleDropdown()">
+                    <div class="text-drop-center">
+                        <h3>Insta360 Discount Links</h3>
+                    </div>
+                </button>
+                <div class="dropcontent" id="dropdownContent">
+                    <a href="https://www.insta360.com/sal/x3?insrc=INR8M08"><h4>X3</h4></a>
+                    <a href="https://www.insta360.com/sal/go-3?insrc=INR8M08"><h4>GO 3</h4></a>
+                    <a href="https://www.insta360.com/sal/flow?insrc=INR8M08"><h4>Flow</h4></a>
+                </div>
             </div>
         </div>
     </section>
@@ -70,7 +81,7 @@
         <div class="video-container">
             <iframe class="video" src="https://www.youtube.com/embed/jP__Xzg3wKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="section__text__half">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius ratione non tempore, illo sapiente id! Voluptatibus quos fuga, saepe qui amet, eius, libero perspiciatis dolorum optio ex nesciunt aut ducimus!</p>
+                <p>You might know me as the "skating guy" from Instagram and TikTok, but I am also currently a student attending Duke University. I post vlogs about it occasionally on YouTube.</p>
             </div>
         </div>
         <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow"
@@ -102,7 +113,7 @@
         <nav>
             <div class="nav-links-container">
                 <ul class="nav-links">
-                    <li><a href="#desktop-nav">Profile</a></li>
+                    <li><a href="#profile">Profile</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
