--- a/index.html
+++ b/index.html
@@ -42,22 +42,22 @@
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="location.href='https://www.instagram.com/tulio_sasaya/'">
                     <i class="fab fa-instagram"></i>
-                        <div class="h3-text">270K</div>
+                        <h3>270K</h3>
                 </button>
                 <button class="btn btn-color-2" onclick="location.href='https://www.tiktok.com/@tulio_sasaya'">
                     <i class="fab fa-tiktok"></i>
-                        <div class="h3-text">620K</div>
+                        <h3>620K</h3>
                 </button>
                 <button class="btn btn-color-2" onclick="location.href='https://www.youtube.com/c/TulioSasaya'">
                     <i class="fab fa-youtube"></i>
-                        <div class="h3-text">5K</div>
+                        <h3>5K</h3>
                 </button>
             </div>
             <div class="misc-container">
                 <button class="misc misc-button1" onclick="location.href='mailto:tksasaya.business@gmail.com'">
                     <i class="left-icon fas fa-solid fa-envelope"></i>
                     <div class="misc-center">
-                        <div class="h3-text">Email Contact</div>
+                        <h3>Email Contact</h3>
                     </div>
                 </button>
             </div>
@@ -65,7 +65,7 @@
                 <button class="misc misc-button1" onclick="location.href='https://ko-fi.com/tuliosasaya'">
                     <i class="left-icon fas fa-solid fa-dollar-sign"></i>
                     <div class="misc-center">
-                        <div class="h3-text">Support Me</div>
+                        <h3>Support Me</h3>
                     </div>
                 </button>
             </div>
@@ -73,7 +73,7 @@
                 <button class="dropdown" onclick="toggleDropdown()">
                     <i class="drop-icon fas fa-solid fa-chevron-down"></i>
                     <div class="text-drop-center">
-                        <div class="h3-text">Insta360 Discount Links</div>
+                        <h3>Insta360 Discount Links</h3>
                     </div>
                 </button>
                 <div class="dropcontent" id="dropdownContent">
