added patreon button and updated follower count

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="location.href='https://www.instagram.com/tulio_sasaya/'">
                     <i class="fab fa-instagram"></i>
-                        <h3>270K</h3>
+                        <h3>300K</h3>
                 </button>
                 <button class="btn btn-color-2" onclick="location.href='https://www.tiktok.com/@tulio_sasaya'">
                     <i class="fab fa-tiktok"></i>
@@ -50,7 +50,7 @@
                 </button>
                 <button class="btn btn-color-2" onclick="location.href='https://www.youtube.com/c/TulioSasaya'">
                     <i class="fab fa-youtube"></i>
-                        <h3>5K</h3>
+                        <h3>6K</h3>
                 </button>
             </div>
             <div class="misc-container">
@@ -62,10 +62,10 @@
                 </button>
             </div>
             <div class="misc-container">
-                <button class="misc misc-button1" onclick="location.href='https://ko-fi.com/tuliosasaya'">
-                    <i class="left-icon fas fa-solid fa-dollar-sign"></i>
+                <button class="misc misc-button1" onclick="location.href='https://patreon.com/tuliosasaya?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=creatorshare_creator&utm_content=join_link'">
+                    <i class="left-icon fas fa-solid fa-brands fa-patreon"></i>
                     <div class="misc-center">
-                        <h3>Support Me</h3>
+                        <h3>Patreon</h3>
                     </div>
                 </button>
             </div>
