updated following count and insta360 links

--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="location.href='https://www.instagram.com/tulio_sasaya/'">
                     <i class="fab fa-instagram"></i>
-                        <h3>300K</h3>
+                        <h3>360K</h3>
                 </button>
                 <button class="btn btn-color-2" onclick="location.href='https://www.tiktok.com/@tulio_sasaya'">
                     <i class="fab fa-tiktok"></i>
-                        <h3>620K</h3>
+                        <h3>630K</h3>
                 </button>
                 <button class="btn btn-color-2" onclick="location.href='https://www.youtube.com/c/TulioSasaya'">
                     <i class="fab fa-youtube"></i>
-                        <h3>6K</h3>
+                        <h3>7K</h3>
                 </button>
             </div>
             <div class="misc-container">
@@ -77,9 +77,9 @@
                     </div>
                 </button>
                 <div class="dropcontent" id="dropdownContent">
-                    <a href="https://www.insta360.com/sal/x3?insrc=INR8M08"><h4>X3</h4></a>
-                    <a href="https://www.insta360.com/sal/go-3?insrc=INR8M08"><h4>GO 3</h4></a>
-                    <a href="https://www.insta360.com/sal/flow?insrc=INR8M08"><h4>Flow</h4></a>
+                    <a href="https://www.insta360.com/sal/x3?utm_term=INR8M08"><h4>X3</h4></a>
+                    <a href="https://www.insta360.com/sal/ace-pro?utm_term=INR8M08"><h4>Ace Pro & Ace</h4></a>
+                    <a href="https://www.insta360.com/sal/go-3?utm_term=INR8M08"><h4>GO 3</h4></a>
                 </div>
             </div>
         </div>
