updated affiliate links for insta360 brand collaboration

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                     </div>
                 </button>
                 <div class="dropcontent" id="dropdownContent">
+                    <a href="https://store.insta360.com/winter-sale?utm_term=INR8M08"><h4>Winter Sale</h4></a>
                     <a href="https://www.insta360.com/sal/x3?utm_term=INR8M08"><h4>X3</h4></a>
                     <a href="https://www.insta360.com/sal/ace-pro?utm_term=INR8M08"><h4>Ace Pro & Ace</h4></a>
-                    <a href="https://www.insta360.com/sal/go-3?utm_term=INR8M08"><h4>GO 3</h4></a>
                 </div>
             </div>
         </div>
