updated follower counts and affiliate links

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="location.href='https://www.instagram.com/tulio_sasaya/'">
                     <i class="fab fa-instagram"></i>
-                        <h3>470K</h3>
+                        <h3>530K</h3>
                 </button>
                 <button class="btn btn-color-2" onclick="location.href='https://www.tiktok.com/@tulio_sasaya'">
                     <i class="fab fa-tiktok"></i>
@@ -50,7 +50,7 @@
                 </button>
                 <button class="btn btn-color-2" onclick="location.href='https://www.youtube.com/c/TulioSasaya'">
                     <i class="fab fa-youtube"></i>
-                        <h3>9K</h3>
+                        <h3>25K</h3>
                 </button>
             </div>
             <div class="misc-container">
@@ -58,14 +58,6 @@
                     <i class="left-icon fas fa-solid fa-envelope"></i>
                     <div class="misc-center">
                         <h3>Email Contact</h3>
-                    </div>
-                </button>
-            </div>
-            <div class="misc-container">
-                <button class="misc misc-button1" onclick="location.href='https://patreon.com/tuliosasaya?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=creatorshare_creator&utm_content=join_link'">
-                    <i class="left-icon fas fa-solid fa-brands fa-patreon"></i>
-                    <div class="misc-center">
-                        <h3>Patreon</h3>
                     </div>
                 </button>
             </div>
@@ -77,9 +69,9 @@
                     </div>
                 </button>
                 <div class="dropcontent" id="dropdownContent">
-                    <a href="https://www.insta360.com/sal/x3?utm_term=INR8M08"><h4>X3(11% off)</h4></a>
+                    <a href="https://store.insta360.com/summer-sale?utm_term=INR8M08"><h4>Summer Sale</h4></a>
+                    <a href="https://www.insta360.com/sal/x4?utm_term=INR8M08"><h4>Insta360 X4</h4></a>
                     <a href="https://www.insta360.com/sal/ace-pro?utm_term=INR8M08"><h4>Ace Pro & Ace</h4></a>
-                    <a href="https://store.insta360.com/winter-sale?utm_term=INR8M08"><h4>GO 3</h4></a>
                 </div>
             </div>
         </div>
@@ -135,7 +127,7 @@
                 </ul>
             </div>
         </nav>
-        <p>Copyright &#169; 2023 Tulio Sasaya. All Rights Reserved.</p>
+        <p>Copyright &#169; 2024 Tulio Sasaya. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
